// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<div
  className="root"
>
  <div
    className="label"
  >
    label
  </div>
  <ul
    className="list"
  >
    <li
      key="ch1"
    >
      <label
        className="inputWrap"
      >
        <input
          className="input"
          name="test"
          onChange={null}
          type="radio"
          value="ch1"
        />
        <span
          className="radioLabel"
        >
          choice 1
        </span>
      </label>
    </li>
    <li
      key="ch2"
    >
      <label
        className="inputWrap"
      >
        <input
          className="input"
          name="test"
          onChange={null}
          type="radio"
          value="ch2"
        />
        <span
          className="radioLabel"
        >
          choice 2
        </span>
      </label>
    </li>
  </ul>
</div>
`;

exports[`rendering renders correctly only one option 1`] = `
<div
  className="root"
>
  <div
    className="label"
  >
    label
  </div>
  <ul
    className="list"
  >
    <li
      key="ch1"
    >
      <label
        className="inputWrap"
      >
        <input
          className="input"
          name="test"
          onChange={null}
          type="radio"
          value="ch1"
        />
        <span
          className="radioLabel"
        >
          choice 1
        </span>
      </label>
    </li>
  </ul>
</div>
`;

exports[`rendering renders correctly only one option and hidden label 1`] = `
<div
  className="root"
>
  <div
    className="isLabelHidden"
  >
    label
  </div>
  <ul
    className="list"
  >
    <li
      key="ch1"
    >
      <label
        className="inputWrap"
      >
        <input
          className="input"
          name="test"
          onChange={null}
          type="radio"
          value="ch1"
        />
        <span
          className="radioLabel"
        >
          choice 1
        </span>
      </label>
    </li>
  </ul>
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root"
>
  <div
    className="isLabelRequired"
  >
    label
  </div>
  <ul
    className="list"
  >
    <li
      key="ch1"
    >
      <label
        className="inputWrap"
      >
        <input
          checked={true}
          className="input"
          disabled={true}
          name="test"
          onChange={null}
          type="radio"
          value="ch1"
        />
        <span
          className="radioLabel"
        >
          choice 1
        </span>
      </label>
    </li>
    <li
      key="ch2"
    >
      <label
        className="inputWrap"
      >
        <input
          className="input"
          disabled={true}
          name="test"
          onChange={null}
          type="radio"
          value="ch2"
        />
        <span
          className="radioLabel"
        >
          choice 2
        </span>
      </label>
    </li>
  </ul>
  <div
    className="description"
  >
    some help
  </div>
  <div
    className="error"
  >
    some error
  </div>
</div>
`;
